--- a/src/main/resources/com/example/kyrsavayajava/Window1.fxml
+++ b/src/main/resources/com/example/kyrsavayajava/Window1.fxml
@@ -4,13 +4,30 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.layout.Pane?>
 <AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kyrsavayajava.Window1">
    <children>
       <TextField fx:id="name" layoutX="39.0" layoutY="36.0" promptText="ФИО клиента" />
       <TextField fx:id="phone" layoutX="40.0" layoutY="92.0" promptText="Номер телефона" />
       <TextField fx:id="plateNr" layoutX="41.0" layoutY="153.0" promptText="Номер автомобиля" />
-      <TextField fx:id="reason" layoutX="40.0" layoutY="225.0" promptText="Причина обращения" />
-      <Button fx:id="Button5" layoutX="249.0" layoutY="51.0" mnemonicParsing="false" onAction="#Open5" prefHeight="81.0" prefWidth="158.0" text="Назначить приемщика" />
-      <Button fx:id="Button6" layoutX="249.0" layoutY="153.0" mnemonicParsing="false" onAction="#Open6" prefHeight="81.0" prefWidth="157.0" text="Провести диагностику" />
+      <TextField fx:id="reason" layoutX="40.0" layoutY="225.0" />
+      <Button fx:id="Button5" layoutX="229.0" layoutY="51.0" mnemonicParsing="false" onAction="#setMasterToRequest" prefHeight="81.0" prefWidth="158.0" text="Назначить приемщика" />
+      <Button fx:id="Button6" layoutX="229.0" layoutY="153.0" mnemonicParsing="false" onAction="#startDiagnostics" prefHeight="81.0" prefWidth="157.0" text="Провести диагностику" />
+      <Button fx:id="Button7" layoutX="229.0" layoutY="253.0" mnemonicParsing="false" onAction="#createRequest" prefHeight="81.0" prefWidth="158.0" text="Создать заявку" />
+      <TableView fx:id="tableRequests" layoutX="400.0" layoutY="51.0" prefHeight="308.0" prefWidth="1010.0">
+         <columns>
+            <TableColumn fx:id="idColumn" prefWidth="40.0" text="№" />
+            <TableColumn fx:id="firstNameColumn" minWidth="6.0" prefWidth="100.0" text="Имя заказчика" />
+            <TableColumn fx:id="lastNameColumn" prefWidth="160.0" text="Фамилия заказчика" />
+            <TableColumn fx:id="phoneColumn" minWidth="2.0" prefWidth="80.0" text="Телефон" />
+            <TableColumn fx:id="licensePlateColumn" minWidth="2.0" prefWidth="90.0" text="Рег. номер" />
+            <TableColumn fx:id="reasonColumn" minWidth="7.0" prefWidth="200.0" text="Причина обращения" />
+            <TableColumn fx:id="requestStatusColumn" prefWidth="120.0" text="Статус заявки" />
+            <TableColumn fx:id="executionStageColumn" prefWidth="120.0" text="Статус выполнения" />
+            <TableColumn fx:id="priceColumn" prefWidth="75.0" text="Стоимость" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
