--- a/src/main/resources/com/example/kyrsavayajava/Window1.fxml
+++ b/src/main/resources/com/example/kyrsavayajava/Window1.fxml
@@ -16,7 +16,7 @@
       <Button fx:id="setMasterButton" disable="true" layoutX="229.0" layoutY="51.0" mnemonicParsing="false" onAction="#setMasterToRequest" prefHeight="81.0" prefWidth="158.0" text="Назначить приемщика" />
       <Button fx:id="startDiagnosticsButton" disable="true" layoutX="229.0" layoutY="153.0" mnemonicParsing="false" onAction="#startDiagnostics" prefHeight="81.0" prefWidth="157.0" text="Провести диагностику" />
       <Button fx:id="Button7" layoutX="229.0" layoutY="253.0" mnemonicParsing="false" onAction="#createRequest" prefHeight="81.0" prefWidth="158.0" text="Создать заявку" />
-      <TableView fx:id="tableRequests" layoutX="400.0" layoutY="51.0" prefHeight="308.0" prefWidth="1010.0" onMouseClicked="#requestSelected">
+      <TableView fx:id="tableRequests" layoutX="400.0" layoutY="51.0" prefHeight="308.0" prefWidth="1010.0">
          <columns>
             <TableColumn fx:id="idColumn" prefWidth="40.0" text="№" />
             <TableColumn fx:id="firstNameColumn" minWidth="6.0" prefWidth="100.0" text="Имя заказчика" />
